--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,38 @@
-{{#each blogs as /blog/}}
+{{!-- {{#each blogs as /blog/}}
 <div class = "container">
     <div class = "row">
         <div class = "col-md-12">
             <h1>{{blog.title}}</h1>
             <p>{{blog.body}}</p>
         </div>
+    </div> --}}
+
+    <!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>{{pageTitle}}</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  {{> header}}
+
+  <div class="content">
+    <h1>Welcome to {{siteName}}!</h1>
+    <p class="intro-text">{{introText}}</p>
+
+    <h2>Latest Posts</h2>
+    <div class="post-list">
+      {{#each posts}}
+        <div class="post">
+          <h3 class="post-title"><a href="/post/{{id}}">{{title}}</a></h3>
+          <p class="post-author">By {{author}} on {{date}}</p>
+          <div class="post-excerpt">{{excerpt}}</div>
+        </div>
+      {{/each}}
     </div>
+  </div>
+
+  {{> footer}}
+</body>
+</html>
