--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,4 @@
-<head>
+{{!-- <head>
   <meta charset="UTF-8">
   <title>My Blog</title>
   <link rel="stylesheet" href="/css/jass.css">
@@ -18,4 +18,25 @@
   </div>
 </body>
 
+</html> --}}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="/css/jass.css">
+    <!-- Add CSS and JavaScript files here -->
+</head>
+<body>
+    {{{header}}}
+
+    <main>
+        {{{body}}}
+    </main>
+
+    {{{footer}}}
+</body>
 </html>
+
