--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,12 +1,10 @@
 {{> header}}
 <section>
-    <h1>Login</h1>
-    <form action="/login" method="POST">
+    <h1>Register</h1>
+    <form action="/register" method="POST">
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+        <button type="submit">Register</button>
     </form>
 </section>
 {{> footer}}
-
-
