Debuggin with Tutor

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
-{{> header}}
-<section>
+
+{{!-- <section>
     <h1>Recent Blog Posts</h1>
     <ul>
         {{#each posts}}
@@ -9,8 +9,9 @@
             </li>
         {{/each}}
     </ul>
-</section>
-{{> footer}}
+</section> --}}
+
+<h1> Your homepage is here</h1>
 
   
 
