--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,45 +1,41 @@
-{{!-- <head>
-  <meta charset="UTF-8">
-  <title>My Blog</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-
-<body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        Blog Posts
-      </h1>
-    </header>
-    <main class="container container-fluid mt-5">
-      {{{ body }}}
-    </main>
-  </div>
-</body>
-
-</html> --}}
-
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1L_dstPt3HV5HzF6Gvk/e3S5qSf5MNw1au+5z5" crossorigin="anonymous">
-    <!-- Add CSS and JavaScript files here -->
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Techno Tingle</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="/css/login-style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+
+  </head>
 <body>
-    {{{header}}}
-
+    {{!-- <header class="display-flex justify-space-between align-center p-2">
+      <h1>
+        <a href="/">Techno Tingle</a>
+      </h1> --}}
+      {{> header }}
+      {{!-- <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a href="/signup">Signup</a>
+          </li>
+        </ul>
+      </nav>
+    </header> --}}
     <main>
-        {{{body}}}
+      <div class="container container-fluid mt-5">
+      {{{body}}}
+    </div>
     </main>
+    {{> footer }}
+  </body>
 
-    {{{footer}}}
-</body>
+
 </html>
-
-
-
+  
